--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@ test.*
 *.json
 venv/
 
-# Ideally don't want to have to ignore
+# Newsletter configs
 cornerly_news/
 spot_of_news/
 
 # Python
 __pycache__/
+
+# passcodes
+server/newsletter.pass
