--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,257 @@
-cachetools==5.5.1
-certifi==2024.12.14
-charset-normalizer==3.4.1
-google-api-core==2.24.0
-google-api-python-client==2.159.0
-google-auth==2.37.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-googleapis-common-protos==1.66.0
-greenlet==3.1.1
-httplib2==0.22.0
+absl-py==2.3.1
+anyio==4.9.0
+appdirs==1.4.4
+archspec==0.2.5
+argcomplete==3.6.2
+argon2-cffi==25.1.0
+argon2-cffi-bindings==21.2.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+autocommand==2.2.2
+babel==2.17.0
+beautifulsoup4==4.13.3
+bleach==6.2.0
+blinker==1.8.2
+boltons==25.0.0
+booleanOperations==0.9.0
+boto3==1.39.9
+botocore==1.39.9
+bottle==0.13.2
+Brotli==1.1.0
+build==1.2.2
+CacheControl==0.14.3
+cachetools==5.5.0
+cachy==0.3.0
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+cleo==2.1.0
+click==8.2.1
+cmake==4.0.0
+colorama==0.4.6
+comm==0.2.3
+conda==25.1.1
+conda-libmamba-solver==25.3.0
+conda-package-handling==2.4.0
+conda_package_streaming==0.11.0
+contourpy==1.3.2
+coverage==7.10.0
+crashtest==0.4.1
+cryptography==45.0.5
+cycler==0.12.1
+Cython==3.1.2
+dbus-python==1.4.0
+decorator==5.2.1
+defcon==0.12.2
+defusedxml==0.7.1
+distlib==0.3.9
+distro==1.9.0
+docopt==0.6.2
+docutils==0.21.2
+dulwich==0.23.2
+editables==0.5
+einops==0.8.1
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+findpython==0.7.0
+Flask==3.1.1
+flask-cors==6.0.1
+flatbuffers==25.2.10
+flit==3.12.0
+flit_core==3.12.0
+fontMath==0.9.4
+fontParts==0.13.2
+fontPens==0.2.4
+fonttools==4.59.0
+fs==2.4.16
+gitdb==4.0.11
+GitPython==3.1.44
+gmpy2==2.2.1
+greenlet==3.2.1
+h11==0.16.0
+hatch-fancy-pypi-readme==25.1.0
+hatch-vcs==0.4.0
+hatchling==1.27.0
+html5lib==1.1
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
-msgpack==1.1.0
-mysql-connector-python==9.4.0
-neovim==0.3.1
-oauthlib==3.2.2
-proto-plus==1.25.0
-protobuf==5.29.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
+importlib_metadata==8.7.0
+iniconfig==2.1.0
+installer==0.7.0
+ipykernel==6.30.0
+ipympl==0.9.7
+ipython==9.4.0
+ipython_genutils==0.2.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jaraco.collections==5.1.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jaraco.text==4.0.0
+jedi==0.19.2
+jeepney==0.9.0
+Jinja2==3.1.6
+jmespath==1.0.1
+joblib==1.4.2
+json5==0.12.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+jupyter-events==0.12.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+keyring==25.6.0
+kiwisolver==1.4.6
+lark==1.2.2
+lensfun==0.3.4
+libmambapy==2.0.6
+lit==20.1.0.dev0
+lockfile==0.12.2
+lxml==6.0.0
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+meson==1.8.2
+mistune==3.1.3
+ml_dtypes==0.5.1
+more-itertools==10.7.0
+mpmath==1.3.0
+msgpack==1.0.5
+MutatorMath==3.0.1
+nbclassic==1.3.1
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest_asyncio==1.6.0
+networkx==3.5
+ninja==1.11.1.4
+nose==1.3.7
+notebook==7.4.4
+notebook_shim==0.2.4
+numpy==2.3.2
+opt_einsum==3.4.0
+orjson==3.11.0
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.1
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pbs-installer==2025.7.12
+pefile==2024.8.26
+pexpect==4.9.0
+pillow==11.3.0
+pkginfo==1.12.0
+platformdirs==4.3.6
+pluggy==1.6.0
+poetry==2.1.2
+poetry-core==2.1.3
+poetry-plugin-export==1.9.0
+pooch==1.8.2
+prettytable==3.16.0
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
+protobuf==6.31.1
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyaml==24.12.0
+pybind11==3.0.0
+pycairo==1.28.0
+pyclipper==1.3.0.post6
+pycosat==0.6.6
+pycparser==2.22
+pycryptodomex==3.23.0
+Pygments==2.19.2
+PyGObject==3.52.3
 pynvim==0.5.2
-pyparsing==3.2.1
+pyparsing==3.2.3
+pyproject_hooks==1.2.0
+PyQt6==6.9.1
+PyQt6-WebEngine==6.9.0
+PyQt6_sip==13.10.2
+PySide6==6.9.1
+PySocks==1.7.1
+pytest==8.4.1
+pytest-cov==6.1.1
+pytest-mock==3.14.0
+pytest-runner==6.0.1
+python-dateutil==2.9.0
+python-json-logger==3.3.0
+pytz==2025.2
+pyxdg==0.28
 PyYAML==6.0.2
-requests==2.32.3
-requests-oauthlib==2.0.0
-rsa==4.9
-uritemplate==4.1.1
-urllib3==2.3.0
+pyzmq==26.2.0
+ranger-fm==1.9.4
+RapidFuzz==3.12.2
+referencing==0.36.2
+Reflector==2023.6.28.0.36.1
+requests==2.32.4
+requests-toolbelt==1.0.0
+rich==14.1.0
+rpds-py==0.22.3
+rpm==4.20.1
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+s3transfer==0.13.1
+scikit-build==0.18.1
+scikit-learn==1.7.1
+scikit_build_core==0.11.5
+scipy==1.16.0
+seaborn==0.13.2
+SecretStorage==3.3.3
+Send2Trash==1.8.3
+setuptools==80.9.0
+setuptools-scm==8.3.1
+shellingham==1.5.4
+shiboken6==6.9.1
+shiboken6-generator==6.9.1
+six==1.17.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+stack_data==0.6.3
+sympy==1.14.0
+TBB==0.2
+terminado==0.18.1
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+toml==0.10.2
+tomli_w==1.2.0
+tomlkit==0.13.3
+torch==2.7.1
+torchvision==0.22.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+trove-classifiers==2025.5.9.12
+typing_extensions==4.14.1
+uc-micro-py==1.0.3
+ueberzug==18.3.1
+ufoProcessor==1.13.3
+unicodedata2==16.0.0
+urllib3==2.5.0
+vici==6.0.1
+virtualenv==20.28.0
+waitress==3.0.2
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wheel==0.45.1
+zipp==3.21.0
+zopfli==0.2.3.post1
+zstandard==0.23.0
