Change neovim to a dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,9 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "mysql-connector-python>=9.0.0",
+]
+
+[dependency-groups]
+dev = [
     "neovim>=0.3.1",
 ]
