--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
+    "bleach>=6.1.0",
     "mysql-connector-python>=9.0.0",
+    "pytest>=8.3.5",
 ]
 
 [dependency-groups]
