--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.8"
 dependencies = [
     "bleach>=6.1.0",
     "mysql-connector-python>=9.0.0",
+    "pre-commit>=3.5.0",
     "pytest>=8.3.5",
 ]
 
