--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bleach>=6.1.0",
     "mysql-connector-python>=9.0.0",
     "pydantic>=2.10.6",
+    "python-dotenv>=1.0.1",
 ]
 
 [dependency-groups]
