--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,7 @@
 name: Unit tests
-run-name: ${{ github.actor }} testing newsletter
 on:
   pull_request:
-    types:
-      - opened
-      - reopened
+    branches: [ main ]
 
 jobs:
   uv-test:
